--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,21 @@ body {
 
 .grid-row {
   display: flex;
-  
+  background-color: #fff;
 }
 
 .grid-cell {
   width: 20px;
   height: 20px;
-  background-color: white;
+  background-color: #ccc;
+  transition: background-color 0.1s ease-in-out;
   border: 1px solid #ccc;
 }
 
 .grid-cell:hover {
-  background-color: lightblue;
+  background-color: #f00;
+  background-image: linear-gradient(to bottom, #f00, #00f);
+  background-size: 100% 2px;
+  background-repeat: repeat-x;
+  background-position: bottom;
 }
